--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <h1>Are computers microwaves??</h1>
-
+<img src:"https://cdna.pcpartpicker.com/static/forever/images/userbuild/263488.b4be7113d8e24bebc2219045c2af6bf8.1600.jpg" width="125px" hight="100px">
 
 </body>
 </html>
