--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <h1>Are computers microwaves??</h1>
-<img src:"https://cdna.pcpartpicker.com/static/forever/images/userbuild/263488.c33a2e44f80be400c7c8021c5b51f7d0.1600.jpg" width="125px" hight="100px">
+<img src="https://cdna.pcpartpicker.com/static/forever/images/userbuild/263488.c33a2e44f80be400c7c8021c5b51f7d0.1600.jpg" width="125px" hight="100px">
 
 </body>
 </html>
