--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 <head>
+  <style>
+    body{color:rgb(123,54,74)
+    }
+  </style>
 </head>
 <body>
 <h1>Are computers microwaves??</h1>
-<img src="https://cdna.pcpartpicker.com/static/forever/images/userbuild/263488.c33a2e44f80be400c7c8021c5b51f7d0.1600.jpg" width="125px" hight="100px">
-
+<img src="https://cdna.pcpartpicker.com/static/forever/images/userbuild/263488.c33a2e44f80be400c7c8021c5b51f7d0.1600.jpg" width="12500px" hight="10000px">
+<iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/Ij9qHLOtMN50k">via GIPHY</a></p>
 </body>
 </html>
