--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html>
 <head>
   <style>
-    
+    body{background-color:rgb(66, 122, 252)}
   </style>
 </head>
 <body>
-<h1>Are computers microwaves??</h1>
-<img src="https://cdna.pcpartpicker.com/static/forever/images/userbuild/263488.c33a2e44f80be400c7c8021c5b51f7d0.1600.jpg" width="12500px" hight="10000px"><br>
+<h1>Are computers microwaves??</h1><br>
+  <h3>What do they do?</h3>
+  <p>Alright look, so microwaves cook your food and computers do a ton of stuff such as search things up and websites and otehr things, even this website that you are looking at is on a computer and if not then get off your phone.. it's not <em>right</em> to read a website on a phone.. 
+    <br>it just <strong><em>isn't<em></strong>
+    <br>So by now you still think that computers can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="207" height="240" frameBorder="2" class="giphy-embed" allowFullScreen></iframe></p>
+    <br>
+    <p>So there may be a huge difference between the two but by the end <strong>I WILL</strong> convince you that <em>microwaves</em> and <em>computers</em> are the exact same.</p>
+<img src="https://cdna.pcpartpicker.com/static/forever/images/userbuild/263488.c33a2e44f80be400c7c8021c5b51f7d0.1600.jpg" width="1250px" hight="1000px"><br>
 <iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/Ij9qHLOtMN50k">via GIPHY</a></p>
 </body>
 </html>
