--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <head>
   <style>
     body{background-color:rgb(66, 122, 252)}
+    body{color:rgb(200,200,200)}
+    #Title{color:rgb(255,255,255)}
+    #heading
   </style>
 </head>
 <body>
-<h1>Are computers microwaves??</h1><br>
-  <h3>What do they do?</h3>
+<h1 id="Title">Are computers microwaves??</h1><br>
+  <h3 class=heading>What do they do?</h3>
   <p>Alright look, so microwaves cook your food and computers do a ton of stuff such as search things up and websites and otehr things, even this website that you are looking at is on a computer and if not then get off your phone.. it's not <em>right</em> to read a website on a phone.. 
     <br>it just <strong><em>isn't<em></strong>
     <br>So by now you still think that computers can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="50" height="60" frameBorder="2" class="giphy-embed" allowFullScreen></iframe></p>
     <br>
     <p>So there may be a huge difference between the two but by the end <strong>I WILL</strong> convince you that <em>microwaves</em> and <em>computers</em> are the exact same.</p><br>
 <iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/Ij9qHLOtMN50k">via GIPHY</a></p>
-</body>
+    <a href="#Title">Jump to top</a>
+    </body>
 </html>
