--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     #Title{color:rgb(255,255,255)
     text-align:center}
     #heading{color:rgb(225,225,225)}
+    .computers{color:rgb(132, 137, 219)}
+    .microwaves{color:rgb(230, 72, 32)}
   </style>
 </head>
 <body>
 <h1 id="Title">Are computers microwaves??</h1><br>
   <h3 class=heading>What do they do?</h3>
   <p>Alright look, so <em class=microwaves>microwaves</em> cook your food and <em class=computers>computers</em> do a ton of stuff such as search things up and websites and other things, even this website that you are looking at is on a <em class=computers>computer</em> and if not then get off your phone.. it's not <em>right</em> to read a website on a phone.. 
-    <br>it just <strong><em>isn't<em></strong>
+    <br>it just <strong><em>isn't</em></strong>
     <br>So by now you still think that <em class=microwaves>microwaves</em> are lame and <em class=computers>computers</em> can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="50" height="60" frameBorder="2" class="giphy-embed" allowFullScreen></iframe></p>
     <br>
     <p>So there may be a huge difference between the two but by the end of this <strong>I WILL</strong> convince you that <em class=microwaves>microwaves</em> and <em class=computers>computers</em> are the <strong>exact</strong> same.</p><br>
