--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <style>
     body{background-color:rgb(66, 122, 252)}
     body{color:rgb(200,200,200)}
-    #Title{color:rgb(255,255,255)
+    #Title{color:rgb(255,255,255);
     text-align:center}
     #heading{color:rgb(225,225,225)}
     .computers{color:rgb(132, 137, 219)}
