--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br>it just <strong><em>isn't...</em></strong>
     <br>So by now you still think that <em class=microwaves>microwaves</em> are lame and <em class=computers>computers</em> can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="50" height="60" frameBorder="2" class="giphy-embed" allowFullScreen></iframe></p>
     <p>So there may be a huge difference between the two but by the end of this <strong>I WILL</strong> convince you that <em class=microwaves>microwaves</em> and <em class=computers>computers</em> are the <strong>exact</strong> same.</p><br>
-<iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/Ij9qHLOtMN50k">via GIPHY</a></p>
-    <a href="#Title">Jump to top</a>
+<iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+  <h5><a href="#Title">Jump to top</a></h5>
     </body>
 </html>
