--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <style>
     body{background-color:rgb(66, 122, 252)}
     body{color:rgb(200,200,200)}
+    h5{text-align:center}
     #Title{color:rgb(255,255,255);
     text-align:center}
     #heading{color:rgb(225,225,225)}
@@ -18,6 +19,7 @@
     <br>So by now you still think that <em class=microwaves>microwaves</em> are lame and <em class=computers>computers</em> can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="50" height="60" frameBorder="2" class="giphy-embed" allowFullScreen></iframe></p>
     <p>So there may be a huge difference between the two but by the end of this <strong>I WILL</strong> convince you that <em class=microwaves>microwaves</em> and <em class=computers>computers</em> are the <strong>exact</strong> same.</p><br>
 <iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+  <br>
   <h5><a href="#Title">Jump to top</a></h5>
     </body>
 </html>
