--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     body{background-color:rgb(66, 122, 252)}
     body{color:rgb(200,200,200)}
     h5{text-align:center}
+    #Its burrito time GIF{text align:center;
+    color:rgb(0,0,0)}
     #Title{color:rgb(255,255,255);
     text-align:center}
     #heading{color:rgb(225,225,225)}
@@ -14,11 +16,11 @@
 <body>
 <h1 id="Title">Are computers microwaves??</h1><br>
   <h2 class=heading><strong>What do they do?</strong></h2>
-  <p>Alright look, so <em class=microwaves>microwaves</em> cook your food and <em class=computers>computers</em> do a ton of stuff such as search things up and websites and other things, even this website that you are looking at is on a <em class=computers>computer</em> and if not then get off your phone.. it's not <em>right</em> to read a website on a phone.. 
+  <p>Alright look, so <em class=microwaves>microwaves</em> cook your food and <em class=computers>computers</em> do a ton of stuff such as search things up and websites and other things, even this website that you are looking at is on a computer and if not then get off your phone.. it's not <em>right</em> to read a website on a phone.. 
     <br>it just <strong><em>isn't...</em></strong>
-    <br>So by now you still think that <em class=microwaves>microwaves</em> are lame and <em class=computers>computers</em> can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="20" height="20" frameBorder="2" class="giphy-embed" allowFullScreen></iframe></p>
-    <p>So there may be a huge difference between the two but by the end of this <strong>I WILL</strong> convince you that <em class=microwaves>microwaves</em> and <em class=computers>computers</em> are the <strong>exact</strong> same.</p><br>
-<iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+    <br>So by now you still think that microwaves are lame and computers can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="20" height="20" class="giphy-embed" allowFullScreen></iframe></p>
+    <p>So there may be a huge difference between the two but by the end of this <strong>I WILL</strong> convince you that microwaves and computers are the <strong>exact</strong> same.</p><br>
+<iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="2" id="Its burrito time GIF" allowFullScreen></iframe>
   <br>
   
   <h5><a href="#Title">Jump to top</a></h5>
