--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <h2 class=heading><strong>What do they do?</strong></h2>
   <p>Alright look, so <em class=microwaves>microwaves</em> cook your food and <em class=computers>computers</em> do a ton of stuff such as search things up and websites and other things, even this website that you are looking at is on a computer and if not then get off your phone.. it's not <em>right</em> to read a website on a phone.. 
     <br>it just <strong><em>isn't...</em></strong>
-    <br>So by now you still think that microwaves are lame and computers can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="20" height="20" class="giphy-embed" allowFullScreen></iframe></p>
+    <br>So by now you still think that microwaves are lame and computers can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="20" height="20" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></p>
     <p>So there may be a huge difference between the two but by the end of this <strong>I WILL</strong> convince you that microwaves and computers are the <strong>exact</strong> same.</p><br>
-<iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="2" id="Its burrito time GIF" allowFullScreen></iframe>
+<iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="4" id="Its burrito time GIF" allowFullScreen></iframe>
   <br>
   
   <h5><a href="#Title">Jump to top</a></h5>
