--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     body{background-color:rgb(66, 122, 252)}
     body{color:rgb(200,200,200)}
     h5{text-align:center}
-    #Its burrito time GIF{text align:center;
+    #burritotimeGIF{text align:center;
     color:rgb(0,0,0)}
     #Title{color:rgb(255,255,255);
     text-align:center}
@@ -20,7 +20,7 @@
     <br>it just <strong><em>isn't...</em></strong>
     <br>So by now you still think that microwaves are lame and computers can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="40" height="40" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></p>
     <p>So there may be a huge difference between the two but by the end of this <strong>I WILL</strong> convince you that microwaves and computers are the <strong>exact</strong> same.</p><br>
-<iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="4" id="Its burrito time GIF" allowFullScreen></iframe>
+<iframe src="https://giphy.com/embed/Ij9qHLOtMN50k" width="480" height="263" frameBorder="4" id="burritotimeGIF" allowFullScreen></iframe>
   <br>
   
   <h5><a href="#Title">Jump to top</a></h5>
