--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
   <style>
     body{background-color:rgb(66, 122, 252)}
-    body{color:rgb(200,200,200)}
+    body{color:rgb(200,200,200);
+    text-align:center}
     h5{text-align:center}
     #burritotimeGIF{text align:center;
     color:rgb(0,0,0)}
