--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <h1 id="Title">Are computers microwaves??</h1><br>
   <h2 class=heading><strong>What do they do?</strong></h2>
-  <p>Alright look, so <em class=microwaves>microwaves</em> cook your food and <em class=computers>computers</em> do a ton of stuff such as search things up and websites and other things, even this website that you are looking at is on a computer and if not then get off your phone.. it's not <em>right</em> to read a website on a phone.. 
+  <p>Alright look, so <em class=microwaves><strong>microwaves</strong></em> cook your food and <em class=computers><strong>computers</strong></em> do a ton of stuff such as search things up and websites and other things, even this website that you are looking at is on a computer and if not then get off your phone.. it's not <em>right</em> to read a website on a phone.. 
     <br>it just <strong><em>isn't...</em></strong>
     <br>So by now you still think that microwaves are lame and computers can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="40" height="40" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></p>
     <p>So there may be a huge difference between the two but by the end of this <strong>I WILL</strong> convince you that microwaves and computers are the <strong>exact</strong> same.</p><br>
