--- a/page 2.html
+++ b/page 2.html
@@ -5,7 +5,10 @@ body{color:rgb(255, 221, 128);
 text-align:center}
 </head>
 <body>
-<h1>!THIS IS ONLY TEMPORARY!</h1>
-<p>ReEEeEEeEeEeeEeEeEeEeeeEEeeeeEEeeeeeEeeeeeEEeeeeeeeeEeeeeeeEEeeEeeeeeEeeeeeeeeeEEeeeeeeeEeeeeeeeeeeEEeeeeeeeeee</p>
+<h1>!THIS IS ONLY TEMPORARY!</h1><br>
+<p>ReEEeEEeEeEeeEeEeEeEeeeEEeeeeEEeeeeeEeeeeeEEeeeeeeeeEeeeeeeEEeeEeeeeeEeeeeeeeeeEEeeeeeeeEeeeeeeeeeeEEeeeeeeeeee
+  eEEeEEeEeEeeEeEeEeEeeeEEeeeeEEeeeeeEeeeeeEEeeeeeeeeEeeeeeeEEeeEeeeeeEeeeeeeeeeEEeeeeeeeEeeeeeeeeeeEEeeeeeeeeeeeE
+  EeEEeEeEeeEeEeEeEeeeEEeeeeEEeeeeeEeeeeeEEeeeeeeeeEeeeeeeEEeeEeeeeeEeeeeeeeeeEEeeeeeeeEeeeeeeeeeeEEeeeeeeeeeeEEeE
+  EeEeEeeEeEeEeEeeeEEeeeeEEeeeeeEeeeeeEEeeeeeeeeEeeeeeeEEeeEeeeeeEeeeeeeeeeEEeeeeeeeEeeeeeeeeeeEEeeeeeeeeee.</p>
 </body>
 </html>
