--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
     #Title{color:rgb(255,255,255);
     text-align:center}
     #heading{color:rgb(225,225,225)}
+    #Contents{text-align:right}
     .computers{color:rgb(8, 0, 255)}
     .microwaves{color:rgb(230, 72, 32)}
   </style>
 </head>
 <body>
 <h1 id="Title">Are computers microwaves??</h1><br>
-  <h2 class=heading><strong>What do they do?</strong></h2>
+  <h2 class=heading id="Contents"><strong>Contents</strong><h2><br>
+    <h5>
+      <ul>
+        <li>
+        <li>
+        <li>
+      </ul>
+    </h5>
+  <h2 class=heading id="whatdotheydo"><strong>What do they do?</strong></h2>
   <p>Alright look, so <em class=microwaves><strong>microwaves</strong></em> cook your food and <em class=computers><strong>computers</strong></em> do a ton of stuff such as search things up and websites and other things, even this website that you are looking at is on a computer and if not then get off your phone.. it's not <em>right</em> to read a website on a phone.. 
     <br>it just <strong><em>isn't...</em></strong>
     <br>So by now you still think that microwaves are lame and computers can literally kill all of humanity <strong><em>twice..</em></strong><iframe src="https://giphy.com/embed/kdFKwmwADglUorwrIa" width="40" height="40" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></p>
