--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     body{color:rgb(200,200,200);
     text-align:center}
     h5{text-align:center}
+    ul{text-align:left}
     #burritotimeGIF{text align:center;
     color:rgb(0,0,0)}
     #Title{color:rgb(255,255,255);
@@ -16,7 +17,7 @@
   </style>
 </head>
 <body>
-<h1 id="Title">Are computers microwaves??</h1><br>
+<br><h1 id="Title">Are computers microwaves??</h1><br>
   <h2 class=heading id="Contents"><strong>Contents</strong><h2><br>
     <h4>
       <ul>
@@ -25,6 +26,8 @@
         <li>A list cuz it's cool(in progress)
       </ul>
     </h4>
+    <br>
+    <br>
   <h2 class=heading id="whatdotheydo"><strong>What do they do?</strong></h2>
   <p>Alright look, so <em class=microwaves><strong>microwaves</strong></em> cook your food and <em class=computers><strong>computers</strong></em> do a ton of stuff such as search things up and websites and other things, even this website that you are looking at is on a computer and if not then get off your phone.. it's not <em>right</em> to read a website on a phone.. 
     <br>it just <strong><em>isn't...</em></strong>
