--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </head>
 <body>
 <br><h1 id="Title">Are computers microwaves??</h1><br>
-  <h2 class=heading id="Contents"><strong>Contents</strong><h2><br>
+  <h2 class=heading id="Contents"><strong>Contents</strong><h2>
     <h4>
       <ul>
         <li><a href="#Contents">this stuff that you're reading right now</a>
-        <li><a href"#whatdotheydo">What do they do?</a>
+        <li><a href="#whatdotheydo">What do they do?</a>
         <li>A list cuz it's cool(in progress)
       </ul>
     </h4>
