--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <h2 class=heading id="Contents"><strong>Contents</strong><h2>
     <h4>
       <ul>
-        <li><a href="#Contents">this stuff that you're reading right now</a>
+        <li><a href="#Contents">This stuff that you're reading right now</a>
         <li><a href="#whatdotheydo">What do they do?</a>
-        <li>A list cuz it's cool(in progress)
+        <li>A list cuz it's cool(in progress)poo poo haha
       </ul>
     </h4>
     <br>
