--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul id="contentslist">
         <li><a href="#Contents">This stuff that you're reading right now</a>
         <li><a href="#whatdotheydo">What do they do?</a>
-        <li>A list cuz it's cool(in progress)poo poo haha
+        <li>A list cuz it's cool(in progress)poo poo haha I can say whatever I want in here ;))))
       </ul>
     </h4>
     
