--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
   <style>
-    body{background-color:rgb(66, 122, 252)}
+    (66, 122, 252)}
     body{color:rgb(200,200,200);
-    text-align:center}
+    text-align:center;
+    background-image: linear-gradient(rgb(219, 233, 255), rgb(66, 122, 252));
+    min-width:100%;
+    min-hieght:100%}
     
     h5{text-align:center}
     #contentslist{text-align:left}
