--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
     <br>
     <br>
     
-    <h1>A <strong class=computers>Pro's</strong> and <strong class=microwaves>Cons</strong> List<br>
-      Except it's a <strong class=microwaves>Yes</strong> and <strong class=computers>No</strong> List and <strong class=Why>Why</strong></h2>
-      
-      <h2><strong class=microwaves>Yes</strong>, computers are microwaves and <em class=Why>wHy</em></strong></h3>
+    <h2><strong>A video for dummies</strong><h2><br>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/er3v4PVNQqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+      <iframe width="212" height="103" src="https://www.youtube.com/embed/AkFi90lZmXA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><iframe width="212" height="103" src="https://www.youtube.com/embed/wgbV6DLVezo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><iframe width="212" height="103" src="https://www.youtube.com/embed/p3q5zWCw8J4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <br>
   
   <h5><a href="#Title">Jump to top</a></h5>
