--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <br>
     <br>
     
-    <h1><strong>A Video for Dummies</strong><h1><br>
+    <h1><strong>Computers for Dummies</strong><h1><br>
  <iframe width="1120" height="630" src="https://www.youtube.com/embed/er3v4PVNQqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
       <iframe width="424" height="206" src="https://www.youtube.com/embed/AkFi90lZmXA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><iframe width="424" height="206" src="https://www.youtube.com/embed/wgbV6DLVezo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><iframe width="424" height="206" src="https://www.youtube.com/embed/p3q5zWCw8J4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <br>
