--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     .heading{color:rgb(225,225,225)}
     #Contents{text-align:left}
     
-    #diffli|Comps{text-align:left}
-    #diffli|Microwaves{text-align:right}
+    #diffliComps{text-align:left}
+    #diffliMicrowaves{text-align:right}
     
     .Why{color:rgb(207, 132, 2)}
     .computers{color:rgb(8, 0, 255)}
@@ -67,7 +67,7 @@
   <br>
       <h1 class=heading id="Diffbtweenthem">Differences between Computers and Microwaves</h1>
       <p>tbh it's not that much..</p><br>
-      <h2 class=computers id="diffli|Comps">Computers</h2> <h2 class=microwaves id="diffli|Microwaves"></h2>
+      <h2 class=computers id="diffliComps">Computers</h2> <h2 class=microwaves id="diffliMicrowaves">Microwaves</h2>
       <ol>
        <li>Used for multiuse - I can't list them all but some examples such as 
        <li>
