--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     .heading{color:rgb(225,225,225)}
     #Contents{text-align:left}
     
-    #diffliComps{text-align:left}
+    .diffliComps{text-align:left}
     #diffliMicrowaves{text-align:right}
     
     .Why{color:rgb(207, 132, 2)}
@@ -28,6 +28,7 @@
   </style>
 </head>
 <body>
+  remeber do dot dot 151,103,212
 <br><h1 id="Title">Are computers microwaves??</h1><br>
   <h2 class=heading id="Contents"><strong>Contents</strong><h2>
     <h4>
@@ -67,8 +68,9 @@
   <br>
       <h1 class=heading id="Diffbtweenthem">Differences between Computers and Microwaves</h1>
       <p>tbh it's not that much..</p><br>
-      <h2 class=computers id="diffliComps">Computers</h2> <h2 class=microwaves id="diffliMicrowaves">Microwaves</h2>
-      <ol>
+      <h2 class=computers class=diffliComps><strong class"dotdotdot">.......</strong>Computers</h2>
+      <h2 class=microwaves id="diffliMicrowaves">Microwaves<strong classs>.......</strong></h2>
+      <ol class=diffliComps>
        <li>Used for multiuse - I can't list them all but some examples such as 
        <li>
       </ol>
