--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
     .diffliComps{text-align:left}
     #diffliMicrowaves{text-align:right}
+    .dotdotdot{color:rgb(151,103,212)}
     
     .Why{color:rgb(207, 132, 2)}
     .computers{color:rgb(8, 0, 255)}
